Mpegts file produces no audio
This file from http://trac.ffmpeg.org/raw-attachment/ticket/577/mpegts_aac_latm_probe_failure.ts produces no audio when played (video ok).
Kind regards
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Migration Bot added Severity::normal Type::bug Version::master git + 1 deleted label
added Severity::normal Type::bug Version::master git + 1 deleted label
- Migration Bot changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- François Cartegnie assigned to @funman and unassigned @MigrationBot
assigned to @funman and unassigned @MigrationBot
- Developer
no audio sent.
- François Cartegnie added Component::Demuxers: TS label and removed 1 deleted label
added Component::Demuxers: TS label and removed 1 deleted label
- Developer
for me looks like an IOD parsing problem, as it fails on 0x05 tag
- Developer
Audio is stopped at packetizer level, STATE_NEXT_SYNC
- Developer
ok, it is set to ADTS because of missing decoder extradata and then packetizer junks everything. confirms the IOD parsing problem
- Developer
commit b557f55d Author: Francois Cartegnie fcvlcdev@free.fr Date: Fri Jun 6 21:41:39 2014 +0200
demux: ts: fix IOD parsing (fix [#11573](https://code.videolan.org/videolan/vlc/-/issues/11573)) IOD bytes must be read in order. introduced by 8fdf1f20beb53ec72b7f2a903071857596ce0d72
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0
- François Cartegnie mentioned in issue #11576
mentioned in issue #11576
- Jean-Baptiste Kempf marked this issue as related to #11576
marked this issue as related to #11576