demux: ts: fix IOD parsing (fix #11573)

IOD bytes must be read in order.
introduced by 8fdf1f20beb53ec72b7f2a903071857596ce0d72